--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,55 @@ recommendation_system_codes/song.pkl
 recommendation_system_codes/popular_song.pkl
 
 recommendation_system_codes/popular_playlist.pkl
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/.ipynb_checkpoints/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/azkaban/AutoRecAllSplits/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/ratings.dat
+
+*.dat
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/Collaborative_Deep_Learning/1.MXNet-for-CDL/
+
+*.zip
+
+CTR/第五课 深度学习CTR预估(上)/data/
+
+CTR/第六课 深度学习CTR预估(下)/ctr_data.txt
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/Youtube_recommender_system/.ipynb_checkpoints/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/Youtube_recommender_system/
+
+DAE/recs.tsv
+
+CTR/第五课 深度学习CTR预估(上)/ctr_data.txt
+
+CTR/第五课 深度学习CTR预估(上)/.ipynb_checkpoints/
+
+*.csv
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/Collaborative_Deep_Learning/3.Tensorflow-CDL/.idea/
+
+CTR/第六课 深度学习CTR预估(下)/.ipynb_checkpoints/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/test/testData_uRec/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/data/
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/Neural_Collaborative_Filtering/Data/
+
+*.pyc
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/test/testData_iRec/
+
+*.lan
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/azkaban/AutoRec/
+
+*.bak
+
+CTR/第7-8课 深度学习推荐系统/recommender_system/DAE_based_recommender_system/reco_encoder/data/__init__.py
+
+*.tsv
