--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 
-.DS_Store
-
 WD/data/wd/
 
 WD/data/wd_export/
@@ -105,10 +103,11 @@ GBDT\+LR/gbm_lr/.idea/
 
 suprise/image_svd/
 
-*.ipynb
 
 *.exe
 
 FM/xlearn/small_train.txt.bin
 
 FM/xlearn/small_test.txt.bin
+
+*.pkl
