--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,7 @@ DAT/data/
 一个线上的电影推荐系统/MovieRecProject06/src/sql/
 
 一个线上的电影推荐系统/MovieRecProject06/test/tmp/fm/fm_20240121_155900/
+
+一个线上的电影推荐系统/MovieRecProject06/test/tmp/gbdt_lr/gbdt_lr_20240603_002825/
+
+一个线上的电影推荐系统/MovieRecProject06/test/tmp/gbdt_lr/
