--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,7 @@ DAT/data/
 一个线上的电影推荐系统/MovieRecProject06/test/tmp/gbdt_lr/gbdt_lr_20240603_002825/
 
 一个线上的电影推荐系统/MovieRecProject06/test/tmp/gbdt_lr/
+
+一个线上的电影推荐系统/MovieRecProject06/test/tmp/deepfm/deepfm_20240622_234442/dict/
+
+一个线上的电影推荐系统/MovieRecProject06/test/tmp/deepfm/deepfm_20240622_234442/
