--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,11 @@ DAT/data/
 一个线上的电影推荐系统/MovieRecProject06/test/tmp/deepfm/deepfm_20240622_234442/dict/
 
 一个线上的电影推荐系统/MovieRecProject06/test/tmp/deepfm/deepfm_20240622_234442/
+
+大模型x推荐系统/Dmeta-embedding/
+
+大模型x推荐系统/embeddings_folder/
+
+大模型x推荐系统/MIND/MINDsmall_train/.ipynb_checkpoints/
+
+大模型x推荐系统/MIND/MINDsmall_train/
